# axp-review

./: .gitignore  AXP_CODE_REVIEW.md  AxProtocol.code-workspace  BUILD_AND_PUBLISH.md  CLAUDE.md  CONFIG_HASH_ANALYSIS.md  CONFIG_HASH_IMPLEMENTATION.md  COURIER_IMPROVEMENTS.md  ChatGPT-Pro_Report-Implementation.md  ChatGPT-Pro_Role-Suggestions.md  DELTA4_IMPLEMENTATION.md  DEPLOY-INDEX.md  Dockerfile.axp  Dockerfile.sentinel  DomainConfig.json  FINANCE_DOMAIN_IMPLEMENTATION.md  IMPROVEMENTS_IMPLEMENTED.md  LOGGER_FIX_SUMMARY.md  MANIFEST.in  POST_REFACTORING_IMPROVEMENTS.md  PYPI_IMPLEMENTATION_SUMMARY.md  PYPI_PACKAGING.md  README.md  README_ALL.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  app_axp.py  auth.py  dashboard.py  docker-compose.yml  domain_detector.py  env.example  fault_injection.py  gemini_TAES_tester.html  landing_page_copy_optimized.md  ledger.py  load_roles.py  pyproject.toml  requirements.txt  run_axp.py  (+8 more)
axp/detection/: __init__.py  signals.py
axp/directives/: __init__.py  composer.py  loader.py
axp/governance/: coupling.py  ledger.py
axp/orchestration/: __init__.py  chain.py  composer.py  qa.py  registry.py  role_executor.py  role_loader.py
axp/sentinel/: publish.yml  sentinel.py  sentinel_app.py  verify_ledger.py
axp/utils/: __init__.py  errors.py  llm.py  (+5 more)
axprotocol/: __init__.py
config/: auth_settings.yaml  governance_coupling.json  logging.yaml  role_shapes.json  taes_weights.json  taes_weights.sample.json  ui_presentation.json
legacy/: load_roles_v2.4.py  run_axp.py  v2.3-consolidated.txt
protocol/: AxProtocol_FINAL_SUMMARY.md  AxProtocol_v2.4_AUTHORITY_LAYER.md  AxProtocol_v2.4_CORE_DIRECTIVES.md  AxProtocol_v2.4_D0_CHANGE_CONTROL.md  AxProtocol_v2.4_MASTER_HANDBOOK.md  AxProtocol_v2.4_REDTEAM_LAYER.md  AxProtocol_v2.4_TAES_EVALUATION.md  AxProtocol_v2.4_WARROOM_ADDENDUM.md
scripts/: smoke.sh  smoke_governance.ps1  smoke_governance.sh  sync_bridge.py  validate_all.ps1  validate_all.sh  validate_governance_config.py  validate_taes_weights.py
verify/: conftest.py  test_config_hash.py  test_directive_enforcement_core.py  test_fault_injection_delta4.py  test_fault_injection_pytest.py  test_taes_adherence.py
(+63 files in other folders)
